--- a/webapi/Hospital.csproj
+++ b/webapi/Hospital.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
  <ItemGroup>    
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.HealthChecks" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.HealthChecks" Version="2.2.0" />
   </ItemGroup>
+
+ <ItemGroup>
+   <ProjectReference Include="..\Hospital.DataAccess.SqlLite\Hospital.DataAccess.SqlLite.csproj" />
+ </ItemGroup>
 </Project>
