added libary projects for decoupling

--- a/webapi/Hospital.csproj
+++ b/webapi/Hospital.csproj
@@ -10,5 +10,6 @@
 
  <ItemGroup>
    <ProjectReference Include="..\Hospital.DataAccess.SqlLite\Hospital.DataAccess.SqlLite.csproj" />
+   <ProjectReference Include="..\Hospital.BaseClasses\Hospital.BaseClasses.csproj" />
  </ItemGroup>
 </Project>
