--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SqlConnectionString" : "Server=tcp:hebbal.database.windows.net,1433;Initial Catalog=hebbalhealth;Persist Security Info=False;User ID=bangalore;Password=Sadahalli$123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 }
