--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "SqlConnectionString" : "Server=tcp:hebbal.database.windows.net,1433;Initial Catalog=hebbalhealth;Persist Security Info=False;User ID=bangalore;Password=Sadahalli$123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  "SqlConnectionString" : "Server=tcp:hebbal.database.windows.net,1433;Initial Catalog=hebbalhealth;Persist Security Info=False;User ID=bangalore;Password=Slkkaranataka$123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 }
