--- a/hospital.yaml
+++ b/hospital.yaml
@@ -34,8 +34,11 @@ spec:
           initialDelaySeconds: 90
           periodSeconds: 10
         env:              
-        - name: "DeviceName" 
-          value: "aStrangeDevice"        
+        - name: SqlConnectionString
+          valueFrom:
+            secretKeyRef:
+              name: thebigsecret
+              key: SqlConnectionString       
       imagePullSecrets:
       - name: topsecretregistryconnection
 ---
@@ -44,7 +47,7 @@ apiVersion: v1
 metadata:
   name: hospital-api-service   
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
   - name: http
     protocol: TCP
