--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: '7c46c818-aa97-4bd0-be94-312b31bbe20b'
   imageRepository: 'hospital'
-  containerRegistry: 'dockerstore.azurecr.io'
+  containerRegistry: 'dockerstore' 
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   tag: '$(Build.BuildId)'
   
