--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ resources:
 variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: '7c46c818-aa97-4bd0-be94-312b31bbe20b'
+  containerRegistry: 'dockerstore.azurecr.io'
   imageRepository: 'hospital'
   dockerfilePath: '**/Dockerfile'
   tag: '$(Build.BuildId)'
@@ -34,7 +35,7 @@ stages:
         command: buildAndPush
         repository: 'hospital'
         dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerstore)
+        containerRegistry: $(containerRegistry)
         tags: |
           $(tag)
   - job: PreReleasePrepForhospitalMicroservice
