--- a/hospital.yaml
+++ b/hospital.yaml
@@ -47,7 +47,7 @@ apiVersion: v1
 metadata:
   name: hospital-api-service   
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - name: http
     protocol: TCP
