Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,3 +72,7 @@ stages:
         targetPath: '$(Pipeline.Workspace)'
         artifact: 'hospital'
         publishLocation: 'pipeline'
+    - task: SoapUIProForAzureDevOpsTask@2
+      inputs:
+        project: 'C:\SoapUI\Projects'
+        rootFolder: '$(Common.TestResultsDirectory)'
