--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,7 +74,7 @@ stages:
         publishLocation: 'pipeline'
   - job: IntegationTestForMicroservice
     displayName: Integration Test for Microservice
-    pool:  
+    pool: Bingo
     steps: 
     - task: SoapUIProForAzureDevOpsTask@2
       inputs:
