--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,3 +80,4 @@ stages:
       inputs:
         project: 'C:\SoapUI\Projects\REST-Project-1-readyapi-project.xml'
         rootFolder: '$(Common.TestResultsDirectory)'
+        testRunnerPath: 'C:\Program Files\SmartBear\ReadyAPI-3.2.5\bin'
