--- a/hospital.yaml
+++ b/hospital.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hospital-api   
+  namespace: nm
 spec:
   replicas: 1
   selector:
@@ -14,7 +15,7 @@ spec:
     spec:
       containers:
       - name: hospital-api
-        image: dockerstore.azurecr.io/hospital:##BUILD_ID##
+        image: dockerstore.azurecr.io/hospital:233
         resources:
           requests:
             memory: "32Mi"
@@ -24,15 +25,6 @@ spec:
             cpu: "100m"
         ports:
         - containerPort: 80
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 80
-            httpHeaders:
-            - name: X-Custom-Header
-              value: Awesome
-          initialDelaySeconds: 90
-          periodSeconds: 10
         env:              
         - name: SqlConnectionString
           valueFrom:
@@ -46,6 +38,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: hospital-api-service   
+  namespace: nm
 spec:
   type: ClusterIP
   ports:
