--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,14 +21,22 @@ variables:
   vmImageName: 'ubuntu-latest'
 
 stages:
-- stage: Build
-  displayName: Build and push stage
-  jobs:  
+- stage: UnitTestMicroserviceStage
+  displayName: Running Unit tests for the Hospital Microservice
+  jobs:    
+  - job: UnitTest
+    displayName: Running Unit tests for the Hospital Microservice
+    pool:
+      vmImage: $(vmImageName)
+    steps:    
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: 'test'
   - job: Build
     displayName: Build and push to container registry
     pool:
       vmImage: $(vmImageName)
-    steps:
+    steps:    
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
@@ -40,7 +48,7 @@ stages:
           $(tag)
   - job: PreReleasePrepForhospitalMicroservice
     dependsOn: Build
-    displayName: Pre Release Preparation For hospital Microservice
+    displayName: Pre Release Preparation (Bash build id and Publish for Release pipeline)
     pool:
       vmImage: $(vmImageName)
     steps:
