--- a/hospital.yaml
+++ b/hospital.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: hospital-api
-        image: dockerstore.azurecr.io/hospital:##BUILD_ID##
+        image: naseem.azurecr.io/hospital:##BUILD_ID##
         resources:
           requests:
             memory: "32Mi"
