--- a/hospital.yaml
+++ b/hospital.yaml
@@ -40,7 +40,7 @@ metadata:
   name: hospital-api-service   
   namespace: default
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
   - name: http
     protocol: TCP
