--- a/hospital.yaml
+++ b/hospital.yaml
@@ -40,7 +40,7 @@ metadata:
   name: hospital-api-service   
   namespace: nm
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - name: http
     protocol: TCP
