--- a/thesecret.yaml
+++ b/thesecret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: thebigsecret  
-  namespace: default
+  namespace: nm
 data:
   # You can include additional key value pairs as you do with Opaque Secrets
   SqlConnectionString: YmFyCg==
