--- a/Istio/yaml/ing.yaml
+++ b/Istio/yaml/ing.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: ing-gateway
-  namespace: nm
+  namespace: istio-system
 spec:
   selector:
     istio: ingressgateway # use Istio default gateway implementation
@@ -18,7 +18,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: ing-gtwy-vs
-  namespace: nm
+  namespace: istio-system
 spec:
   hosts:
   - "*"
@@ -40,16 +40,7 @@ spec:
         prefix: "/hospital"       
     route:
     - destination:
-        host: hospital-api-service.nm.svc.cluster.local    
-    - name: "RegexTest"    
-      match:
-      - uri:
-          regex: "/."  # regex not working.. TODO:  fix later.
-    rewrite:
-      uri: "/Weatherforecast"
-    route:
-    - destination:
-        host: hospital-api-service.nm.svc.cluster.local    
+        host: hospital-api-service.nm.svc.cluster.local         
   - name: "Catch-all-route"  
     rewrite:
       uri: "/Patient"
