--- a/Hospital/Hospital.csproj
+++ b/Hospital/Hospital.csproj
@@ -5,6 +5,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.HealthChecks" Version="2.2.0"/>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.0.0"/>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.7.0"/>
+    <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.2.2"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hospital.DataAccess.AzureSql\Hospital.DataAccess.AzureSql.csproj"/>
