--- a/Hospital/Hospital.csproj
+++ b/Hospital/Hospital.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.0.0"/>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.7.0"/>
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.2.2"/>
+    <PackageReference Include="Microsoft.WindowsAzure.StorageClient.Async" Version="0.3.2-preview"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hospital.DataAccess.AzureSql\Hospital.DataAccess.AzureSql.csproj"/>
