--- a/Hospital/keda/ScaledObject.yaml
+++ b/Hospital/keda/ScaledObject.yaml
@@ -4,16 +4,17 @@ metadata:
   name: hospital-processor-scaler
   namespace: nm
   labels:
-    app: hospital-api
-    name: hospital-api
+    app: hospital-api-scaledobject
+    name: hospital-api-scaledobject
 spec:
   scaleTargetRef:
     name: hospital-api
-  # minReplicaCount: 0 Change to define how many minimum replicas you want
+  minReplicaCount: 1 #Change to define how many minimum replicas you want
   maxReplicaCount: 10
   triggers:
   - type: azure-servicebus
     metadata:
+      namespace: demobusk8
       queueName: queuecityworksnet 
       queueLength: '1'
     authenticationRef:
