--- a/Hospital/Hospital.csproj
+++ b/Hospital/Hospital.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Azure.Storage.Blobs" Version="12.7.0"/>
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.2.2"/>
     <PackageReference Include="Microsoft.WindowsAzure.StorageClient.Async" Version="0.3.2-preview"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.7"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.0.7"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hospital.DataAccess.AzureSql\Hospital.DataAccess.AzureSql.csproj"/>
